Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,7 +18,7 @@ steps:
     command: 'install'
     workingDir: '/'
 
-- task: GitHubComment@0
-  inputs:
-    gitHubConnection: 'SzymonJozefowicz'
-    repositoryName: '$(Build.Repository.Name)'
+# - task: GitHubComment@0
+#   inputs:
+#     gitHubConnection: 'SzymonJozefowicz'
+#     repositoryName: '$(Build.Repository.Name)'
